bss with mtz approach

--- a/src/bss_mtz.ipynb
+++ b/src/bss_mtz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,6 @@
     "from itertools import product\n",
     "from mip import CutType\n",
     "from model.model import BSS\n",
-    "from typing import Any, Dict, Set, List, Tuple\n",
     "import networkx as nx\n",
     "import mip\n",
     "import pandas as pd"
@@ -19,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-08-26 15:22:49.761\u001b[0m | \u001b[32m\u001b[1mSUCCESS \u001b[0m | \u001b[36mutils.data_set\u001b[0m:\u001b[36mget_data_json\u001b[0m:\u001b[36m23\u001b[0m - \u001b[32m\u001b[1mJSON file loaded correctly\u001b[0m\n"
+      "\u001b[32m2024-08-28 08:37:42.090\u001b[0m | \u001b[32m\u001b[1mSUCCESS \u001b[0m | \u001b[36mutils.data_set\u001b[0m:\u001b[36mget_data_json\u001b[0m:\u001b[36m23\u001b[0m - \u001b[32m\u001b[1mJSON file loaded correctly\u001b[0m\n"
      ]
     }
    ],
@@ -46,22 +45,15 @@
     "    Q = vehicle_capacity\n",
     "    q = demands\n",
     "    c = distance_matrix\n",
-    "    \n",
-    "    problem = BSS(\n",
-    "        V,\n",
-    "        A,\n",
-    "        m,\n",
-    "        Q,\n",
-    "        q,\n",
-    "        c\n",
-    "    )\n",
+    "\n",
+    "    problem = BSS(V, A, m, Q, q, c)\n",
     "except Exception as e:\n",
     "    raise e"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +62,7 @@
        "({0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13}, 196)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +82,7 @@
        "(30, [0, -3, 1, 2, -5, 2, -10, -2, -2, 3, -1, -6, -9, 2])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +410,7 @@
        "13  1700     0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,87 +442,89 @@
     "for i in V:\n",
     "    for j in V:\n",
     "        if j != 0 and i != j:\n",
-    "            # M = min(Q, Q + q[j])\n",
-    "            M = 10000\n",
-    "            problem.model += problem.t[j] >= problem.t[i] + q[j] - M * (1 - problem.x[i][j])\n",
+    "            M = 100000\n",
+    "            problem.model += problem.t[j] >= problem.t[i] + q[j] - M * (\n",
+    "                1 - problem.x[i][j]\n",
+    "            )\n",
     "\n",
     "for i in V:\n",
     "    for j in V:\n",
     "        if i != 0 and i != j:\n",
-    "            # M = min(Q, Q - q[j])\n",
-    "            M = 10000\n",
-    "            problem.model += problem.t[i] >= problem.t[j] - q[j] - M * (1 - problem.x[i][j])"
+    "            M = 100000\n",
+    "            problem.model += problem.t[i] >= problem.t[j] - q[j] - M * (\n",
+    "                1 - problem.x[i][j]\n",
+    "            )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Welcome to the CBC MILP Solver \n",
+      "Version: Trunk\n",
+      "Build Date: Oct 24 2021 \n",
+      "\n",
       "Starting solution of the Linear programming relaxation problem using Primal Simplex\n",
       "\n",
       "Coin0506I Presolve 338 (-59) rows, 169 (-41) columns and 1248 (-212) elements\n",
-      "Clp1000I sum of infeasibilities 0.106973 - average 0.000316488, 127 fixed columns\n",
+      "Clp1000I sum of infeasibilities 0.761715 - average 0.0022536, 127 fixed columns\n",
       "Coin0506I Presolve 47 (-291) rows, 18 (-151) columns and 133 (-1115) elements\n",
-      "Clp0006I 0  Obj 17500.862 Primal inf 0.045375057 (9) Dual inf 3.9793382e+13 (15)\n",
       "Clp0029I End of values pass after 18 iterations\n",
-      "Clp0014I Perturbing problem by 0.001% of 37.359704 - largest nonzero change 1.5894324e-05 ( 0.0013138967%) - largest zero change 2.7631883e-05\n",
-      "Clp0000I Optimal - objective value 17500.873\n",
-      "Clp0000I Optimal - objective value 17500.873\n",
-      "Coin0511I After Postsolve, objective 17500.873, infeasibilities - dual 0 (0), primal 0 (0)\n",
-      "Clp0006I 0  Obj 17500.873 Dual inf 18933.333 (36)\n",
-      "Clp0014I Perturbing problem by 0.001% of 0.97304428 - largest nonzero change 2.9646427e-05 ( 0.0014821731%) - largest zero change 2.849718e-05\n",
-      "Clp0000I Optimal - objective value 17500.873\n",
-      "Clp0000I Optimal - objective value 17500.873\n",
-      "Clp0000I Optimal - objective value 17500.873\n",
-      "Coin0511I After Postsolve, objective 17500.873, infeasibilities - dual 0 (0), primal 0 (0)\n",
-      "Clp0032I Optimal objective 17500.87333 - 0 iterations time 0.012, Presolve 0.00, Idiot 0.01\n",
-      "status: OptimizationStatus.OPTIMAL objective value : 17500.873333333333\n",
+      "Clp0014I Perturbing problem by 0.001% of 135.53954 - largest nonzero change 2.7998878e-05 ( 0.0019264453%) - largest zero change 1.1053411e-05\n",
+      "Clp0000I Optimal - objective value 17500.087\n",
+      "Clp0000I Optimal - objective value 17500.087\n",
+      "Coin0511I After Postsolve, objective 17500.087, infeasibilities - dual 0 (0), primal 0 (0)\n",
+      "Clp0014I Perturbing problem by 0.001% of 0.97298029 - largest nonzero change 2.001598e-05 ( 0.001000799%) - largest zero change 2.9901009e-05\n",
+      "Clp0000I Optimal - objective value 17500.087\n",
+      "Clp0000I Optimal - objective value 17500.087\n",
+      "Clp0000I Optimal - objective value 17500.087\n",
+      "Coin0511I After Postsolve, objective 17500.087, infeasibilities - dual 0 (0), primal 0 (0)\n",
+      "Clp0032I Optimal objective 17500.08733 - 0 iterations time 0.012, Presolve 0.00, Idiot 0.01\n",
+      "status: OptimizationStatus.OPTIMAL objective value : 17500.087333333333\n",
       "Starting solution of the Linear programming relaxation problem using Primal Simplex\n",
       "\n",
-      "Clp0006I 0  Obj 17500.873 Primal inf 126.49107 (40) Dual inf 2.1339353e+12 (30)\n",
-      "Clp0014I Perturbing problem by 0.001% of 64.352531 - largest nonzero change 0.00065131201 ( 0.0012092371%) - largest zero change 2.7892404e-05\n",
-      "status: OptimizationStatus.OPTIMAL objective value : 18300.029999999995\n",
-      "Clp0000I Optimal - objective value 18300.03\n",
+      "Clp0014I Perturbing problem by 0.001% of 193.74146 - largest nonzero change 0.0018666623 ( 0.00058842968%) - largest zero change 2.9438048e-05\n",
+      "Clp0000I Optimal - objective value 18300.003\n",
+      "status: OptimizationStatus.OPTIMAL objective value : 18300.002999999997\n",
       "Starting solution of the Linear programming relaxation problem using Primal Simplex\n",
       "\n",
-      "Clp0006I 0  Obj 18300.03 Primal inf 199.13236 (63) Dual inf 4.3646122e+12 (78)\n",
-      "Clp0014I Perturbing problem by 0.001% of 59.914496 - largest nonzero change 0.00054950546 ( 0.0010336467%) - largest zero change 2.6719042e-05\n",
-      "Clp0000I Optimal - objective value 19000.053\n",
-      "status: OptimizationStatus.OPTIMAL objective value : 19000.053333333333\n",
+      "Clp0014I Perturbing problem by 0.001% of 177.47418 - largest nonzero change 0.0016100032 ( 0.0024602341%) - largest zero change 2.9532026e-05\n",
+      "status: OptimizationStatus.OPTIMAL objective value : 19000.005333333334\n",
+      "Clp0000I Optimal - objective value 19000.005\n",
       "Starting solution of the Linear programming relaxation problem using Primal Simplex\n",
       "\n",
-      "Clp0006I 0  Obj 19000.053 Primal inf 205.40294 (65) Dual inf 4.1832504e+12 (60)\n",
-      "Clp0014I Perturbing problem by 0.001% of 55.615503 - largest nonzero change 0.00036081194 ( 0.0014052612%) - largest zero change 2.7967393e-05\n",
+      "Clp0014I Perturbing problem by 0.001% of 162.95675 - largest nonzero change 0.0013251399 ( 0.0024602341%) - largest zero change 2.5342666e-05\n",
       "Clp0000I Optimal - objective value 19050\n",
       "status: OptimizationStatus.OPTIMAL objective value : 19050.0\n",
       "Starting solution of the Linear programming relaxation problem using Primal Simplex\n",
       "\n",
-      "Clp0006I 0  Obj 19050 Primal inf 80.638029 (51) Dual inf 3.2270735e+12 (68)\n",
-      "Clp0014I Perturbing problem by 0.001% of 52.289812 - largest nonzero change 0.00048072371 ( 0.0023139634%) - largest zero change 2.9961615e-05\n",
+      "Clp0014I Perturbing problem by 0.001% of 153.79191 - largest nonzero change 0.0012510673 ( 0.0023967217%) - largest zero change 2.9438048e-05\n",
       "Clp0000I Optimal - objective value 19100\n",
       "status: OptimizationStatus.OPTIMAL objective value : 19100.0\n",
       "Starting solution of the Linear programming relaxation problem using Primal Simplex\n",
       "\n",
-      "Clp0006I 0  Obj 19100 Primal inf 104.18816 (33) Dual inf 6.12921e+11 (13)\n",
-      "Clp0014I Perturbing problem by 0.001% of 50.407859 - largest nonzero change 0.00041549129 ( 0.0019003805%) - largest zero change 2.9438048e-05\n",
+      "Clp0014I Perturbing problem by 0.001% of 147.7959 - largest nonzero change 0.00094674993 ( 0.001473902%) - largest zero change 2.7293559e-05\n",
+      "status: OptimizationStatus.OPTIMAL objective value : 19100.000000000004\n",
       "Clp0000I Optimal - objective value 19100\n",
-      "status: OptimizationStatus.OPTIMAL objective value : 19100.0\n",
       "Starting solution of the Linear programming relaxation problem using Primal Simplex\n",
       "\n",
-      "Clp0006I 0  Obj 19100 Primal inf 13.618091 (9) Dual inf 3.3125152e+12 (121)\n",
-      "Clp0014I Perturbing problem by 0.001% of 46.361982 - largest nonzero change 0.00034875146 ( 0.0021648839%) - largest zero change 2.9438048e-05\n",
-      "status: OptimizationStatus.OPTIMAL objective value : 19100.03294117648\n",
-      "Clp0000I Optimal - objective value 19100.033\n"
+      "Clp0014I Perturbing problem by 0.001% of 143.5294 - largest nonzero change 0.0013037897 ( 0.0024602341%) - largest zero change 2.9532026e-05\n",
+      "status: OptimizationStatus.OPTIMAL objective value : 19100.000000000007\n",
+      "Clp0000I Optimal - objective value 19100\n",
+      "Starting solution of the Linear programming relaxation problem using Primal Simplex\n",
+      "\n",
+      "Clp0014I Perturbing problem by 0.001% of 142.99996 - largest nonzero change 0.0013919972 ( 0.0017319411%) - largest zero change 2.7885822e-05\n",
+      "status: OptimizationStatus.OPTIMAL objective value : 19100.0\n",
+      "Clp0000I Optimal - objective value 19100\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "new_contraints = True\n",
     "while new_contraints:\n",
     "    problem.model.optimize(relax=True)\n",
@@ -568,41 +562,39 @@
     "\n",
     "        if cp.cuts:\n",
     "            problem.model += cp\n",
-    "            new_contraints = True\n"
+    "            new_contraints = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "range(0, 14)\n",
       "x_0_9 = 1.0\n",
-      "x_1_11 = 0.999670588235293\n",
-      "x_2_10 = 0.9998352941176457\n",
-      "x_3_1 = 0.9996705882352936\n",
-      "x_4_6 = 0.9999999999999998\n",
+      "x_1_11 = 0.9997200000000017\n",
+      "x_2_10 = 0.9997200000000017\n",
+      "x_3_1 = 0.9997200000000009\n",
+      "x_4_6 = 0.9999999999999999\n",
       "x_5_8 = 1.0\n",
-      "x_6_3 = 0.9996705882352936\n",
-      "x_7_5 = 0.9996705882352938\n",
-      "x_8_13 = 0.9996705882352932\n",
-      "x_9_7 = 0.9996705882352944\n",
-      "x_10_4 = 0.9998352941176457\n",
-      "x_11_12 = 1.0000000000000024\n",
+      "x_6_3 = 0.9997200000000016\n",
+      "x_7_5 = 0.9997200000000003\n",
+      "x_8_13 = 0.999440000000002\n",
+      "x_9_7 = 0.9997200000000003\n",
+      "x_10_4 = 0.9997200000000017\n",
+      "x_11_12 = 1.0\n",
       "x_12_0 = 1.0\n",
-      "x_12_9 = 0.9999999999999998\n",
-      "x_13_2 = 0.9995058823529415\n"
+      "x_12_9 = 1.0000000000000002\n",
+      "x_13_2 = 0.9997199999999997\n"
      ]
     }
    ],
    "source": [
     "if problem.model.num_solutions:\n",
     "    route = [(i, j) for i in V for j in V if problem.x[i][j].x >= 0.5]\n",
-    "    print(range(len(problem.t)))\n",
     "    t_route = [problem.t[j].x for j in range(len(problem.t))]\n",
     "\n",
     "    for i, j in route:\n",
@@ -611,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -619,22 +611,22 @@
       "text/plain": [
        "([0, -3, 1, 2, -5, 2, -10, -2, -2, 3, -1, -6, -9, 2],\n",
        " [0.0,\n",
-       "  11.70588235295753,\n",
-       "  18.823529411751544,\n",
-       "  11.411764705897317,\n",
-       "  16.117647058836994,\n",
-       "  9.588235294116032,\n",
-       "  6.117647058834857,\n",
-       "  4.294117647054918,\n",
-       "  7.588235294113588,\n",
-       "  3.0000000000001137,\n",
-       "  19.470588235294578,\n",
-       "  9.00000000002592,\n",
+       "  5.99831999999491,\n",
+       "  1.0,\n",
+       "  8.995799999991684,\n",
+       "  10.999439999992886,\n",
+       "  30.000000000000007,\n",
+       "  0.9994399999954542,\n",
        "  0.0,\n",
-       "  12.88235294116587])"
+       "  28.00000000000154,\n",
+       "  3.00000000001172,\n",
+       "  4.998599999999459,\n",
+       "  8.99999999999921,\n",
+       "  0.0,\n",
+       "  2.0])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
